--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,1 +1,5 @@
 <link rel="stylesheet" href="src/styles/theme.css" />
+<link
+  rel="stylesheet"
+  href="https://www.web.statistik.zh.ch/leu/styles/fonts.css"
+/>
