docs: change absolute to relative path

--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,4 +1,4 @@
-<link rel="stylesheet" href="/theme.css" />
+<link rel="stylesheet" href="theme.css" />
 <link
   rel="stylesheet"
   href="https://www.web.statistik.zh.ch/leu/styles/fonts.css"
