--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,5 +1,2 @@
 <link rel="stylesheet" href="theme.css" />
-<link
-  rel="stylesheet"
-  href="https://www.web.statistik.zh.ch/leu/styles/fonts.css"
-/>
+<link rel="stylesheet" href="fonts.css" />
